--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>¿Quien soy?</title>
 </head>
 <body>
+    
+    <h1>¿Quien soy?</h1>
     <h1>¿Quien soy?</h1>
     <p>Soy Oscar salazar, estudiante de ingeniería de sistemas</p>
 </body>
