dupliqué el parrafo

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>¿Quien soy?</h1>
     <h1>¿Quien soy?</h1>
     <p>Soy Oscar salazar, estudiante de ingeniería de sistemas</p>
+    <p>Soy Oscar salazar, estudiante de ingeniería de sistemas</p>
+    <p>Soy Oscar salazar, estudiante de ingeniería de sistemas</p>
 </body>
 </html>
